src/test/ui/impl-trait/issue-55872.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for existential type
  --> $DIR/issue-55872.rs:13:28
   |
LL |       fn foo<T>() -> Self::E {
   |  ____________________________^
LL | |
LL | |         || ()
LL | |     }
   | |_____^

error: aborting due to previous error

